# abcmidi

./: .gitignore  CMakeLists.txt  Makefile  Makefile.in  VERSION  abc.h  abcmatch.c  drawtune.c  matchsup.c  mftext.c  midi2abc.c  midi2xyz.c  parseabc.h  store.c  toabc.c  yapstree.c
doc/: CHANGES  midi2abc.1  readme.txt
doc/programming/: midi2abc.txt
makefiles/: djgpp.mak  makefile.ming  unix.mak
